# stsw-mkbox-bleco

./: README.md
ble_fw_upg_app/: CMakeLists.txt  README.rst  sample.yaml
ble_fw_upg_app/boards/: sensortile_box_pro.overlay
ble_fw_upg_app/src/: ble_fw.c
